--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/app.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/app.css" />
     <title>Jogo da Velha</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <main>
+      <h1 class="text-center">Jogo da Velha</h1>
+      <div class="container">
+        <div id="1"></div>
+        <div id="2"></div>
+        <div id="3"></div>
+        <div id="4"></div>
+        <div id="5"></div>
+        <div id="6"></div>
+        <div id="7"></div>
+        <div id="8"></div>
+        <div id="9"></div>
+      </div>
+      <p class="text-center">Jogador: <span id="jogador-selecionado"></span></p>
+      <p class="text-center">Vencerdor: <span id="jogador-vencedor"></span></p>
+      <button>Reiniciar</button>
+    </main>
     <script src="js/app.js"></script>
-</body>
+  </body>
 </html>
