funcionamento basico do jogo

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <main>
       <h1 class="text-center">Jogo da Velha</h1>
       <div class="container">
-        <div id="1"></div>
-        <div id="2"></div>
-        <div id="3"></div>
-        <div id="4"></div>
-        <div id="5"></div>
-        <div id="6"></div>
-        <div id="7"></div>
-        <div id="8"></div>
-        <div id="9"></div>
+        <div class="quadrado" onclick="escolherQuadrado(this)"></div>
+        <div class="quadrado" onclick="escolherQuadrado(this)"></div>
+        <div class="quadrado" onclick="escolherQuadrado(this)"></div>
+        <div class="quadrado" onclick="escolherQuadrado(this)"></div>
+        <div class="quadrado" onclick="escolherQuadrado(this)"></div>
+        <div class="quadrado" onclick="escolherQuadrado(this)"></div>
+        <div class="quadrado" onclick="escolherQuadrado(this)"></div>
+        <div class="quadrado" onclick="escolherQuadrado(this)"></div>
+        <div class="quadrado" onclick="escolherQuadrado(this)"></div>
       </div>
       <p class="text-center">Jogador: <span id="jogador-selecionado"></span></p>
       <p class="text-center">Vencerdor: <span id="jogador-vencedor"></span></p>
