--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <p class="text-center">Jogador: <span id="jogador-selecionado"></span></p>
       <p class="text-center">Vencerdor: <span id="jogador-vencedor"></span></p>
-      <button>Reiniciar</button>
+      <button onclick="reiniciar()">Reiniciar</button>
     </main>
     <script src="js/app.js"></script>
   </body>
